Ryddet i en lambda for litt mindre kode